# tee-attestation

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  environment.yaml  fedn.manifest.template  server.c
.devcontainer/: devcontainer.json.tpl
config/: settings-reducer.yaml
resources/: package.tgz  seed.npz
